--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Raleway:wght@400;600&display=swap"
-		rel="stylesheet">
+	rel="stylesheet">
 
 	<link rel="stylesheet" href="style.css">
 
@@ -19,6 +19,7 @@
 <body>
 
 	<header class="header">
+		<img src="images/logo.svg" alt="">
 		<nav>
 			<ul>
 				<li><a href="#">Features</a></li>
@@ -29,7 +30,7 @@
 	</header>
 
 	<section>
-		<div class="content-email">
+		<div class="content-one">
 			<h1>
 				All your files in one secure location, accessible anywhere.
 			</h1>
@@ -40,8 +41,11 @@
 				family, and co-workers.
 			</p>
 
-			<input type="email" name="email" id="email" placeholder="Enter your email...">
-			<button type="submit">Get Started</button>
+			<form action="#" method="POST">
+				<input type="email" name="email" id="email" placeholder="Enter your email...">
+				<button type="submit">Get Started</button>
+			</form>
+			
 		</div>
 
 		<div>
@@ -50,7 +54,7 @@
 	</section>
 
 
-	<section>
+	<section class="content-two">
 		<div>
 			<h3>Stay productive, wherever you are</h3>
 
@@ -64,64 +68,81 @@
 				live collaboration. No email attachments required!
 			</p>
 
-			<a href="#">See how Fylo works</a>
+			<div>
+				<a href="#">See how Fylo works</a>
+				<img src="images/icon-arrow.svg" alt="">
+			</div>
+			
 		</div>
 
 		<div class="card">
+			<img src="images/icon-quotes.svg" alt="">
 			<small>
 				Fylo has improved our team productivity by an order of magnitude. Since
 				making the switch our team has become a well-oiled collaboration machine.
 			</small>
-		</div>
 
-		<div>
-			<img src="images/avatar-testimonial.jpg" alt="">
-			
-			<div>
-				<h4>Kyle Burton</h4>
-				<span>Founder & CEO, Huddle</span>
+			<div class="profile">
+				<img src="images/avatar-testimonial.jpg" alt="">
+				
+				<div>
+					<h4>Kyle Burton</h4>
+					<span>Founder & CEO, Huddle</span>
+				</div>
 			</div>
 		</div>
 	</section>
 
 	<section>
+		<div>
+			<h3>Get early access today</h3>
+			<p>
+				It only takes a minute to sign up and our free starter tier is extremely generous.
+				If you have any questions, our support team would be happy to help you.
+			</p>
+		</div>
 
+		<form action="#" method="POST">
+			<input type="email" name="email" id="email" placeholder="email@example.com">
+			<button type="submit">Get Started Foor Free</button>
+		</form>
 	</section>
 
 	<footer>
+		<div>
+			<img src="images/logo.svg" alt="">
+			<div>
+				<img src="images/icon-phone.svg" alt="">
+				<a href="tel:+1-543-123-4567">Phone: +1-543-123-4567</a>
+			</div>
 
+			<div>
+				<img src="images/icon-email.svg" alt="">
+				<a href="mailto:contatothiagomoreira@outlook.com">example@fylo.com</a>
+			</div>
+		</div>
+		
+		<ul>
+			<li><a href="#">About Us</a></li>
+			<li><a href="#">Jobs</a></li>
+			<li><a href="#">Press</a></li>
+			<li><a href="#">Blog</a></li>
+		</ul>
+
+		<ul>
+			<li><a href="#">Contact Us</a></li>
+			<li><a href="#">Terms</a></li>
+			<li><a href="#">Privacy</a></li>
+		</ul>
 	</footer>
 	
 
-	
-
-	
-
-	Get early access today
-
-	It only takes a minute to sign up and our free starter tier is extremely generous.
-	If you have any questions, our support team would be happy to help you.
-
-	Get Started For Free
-
-	Phone: +1-543-123-4567
-	example@fylo.com
-
-	About Us
-	Jobs
-	Press
-	Blog
-
-	Contact Us
-	Terms
-	Privacy
-
-	<footer>
+	<!-- <footer>
 		<p class="attribution">
 			Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
 			Coded by <a href="#">Your Name Here</a>.
 		</p>
-	</footer>
+	</footer> -->
 </body>
 
 </html>
