--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 	<footer>
 		<div class="container footer">
 			<div class="contact">
-				<img src="images/logo.svg" alt="">
+				<img src="images/logo.svg" alt="logo" class="logo">
 				<div>
 					<img src="images/icon-phone.svg" alt="">
 					<a href="tel:+55-99725-3666">Phone: +1-543-123-4567</a>
